--- a/Comparing-Classifiers.ipynb
+++ b/Comparing-Classifiers.ipynb
@@ -74,7 +74,7 @@
    "id": "54c80f31-0bff-466a-bd9c-e26b4256107f",
    "metadata": {},
    "source": [
-    "## Classifiers"
+    "### Classifiers"
    ]
   },
   {
@@ -216,7 +216,7 @@
    "id": "2824168e-cd48-4f4b-a629-4c26fe6998d9",
    "metadata": {},
    "source": [
-    "## Confusion Matrix"
+    "### Confusion Matrix"
    ]
   },
   {
@@ -281,7 +281,7 @@
    "id": "22779165-5325-444d-b43a-d56fd47171ea",
    "metadata": {},
    "source": [
-    "## Result"
+    "### Result"
    ]
   },
   {
@@ -535,7 +535,7 @@
    "id": "56290769-a245-4266-83a8-29e4b9f94141",
    "metadata": {},
    "source": [
-    "## Experiment Results and Conclusions"
+    "### Experiment Results and Conclusions"
    ]
   },
   {
@@ -591,14 +591,6 @@
     "http://archive.ics.uci.edu/ml/datasets/Parkinson+Speech+Dataset+with++Multiple+Types\n",
     "+of+Sound+Recordings (accessed Apr. 25, 2022)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7bb0623a-42c6-45e6-93c1-46b18f801e87",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
